# smtlib-terms

./: CHANGELOG.md  README.md  cabal.project  notes.txt  smtlib-terms.cabal
src-core/Smtlib/: Expr.hs  Syntax.hs
src-core/Smtlib/Function/: Annotation.hs
src-core/Smtlib/Logic/: Lia.hs
src-core/Smtlib/Syntax/: Term.hs
src-term/Smtlib/: Logic.hsig  Term.hs
test/: Main.hs
