cabal-version: 3.0
name: smtlib-terms
version: 0.1.0.0
synopsis: S-Expressions
description: A type for S-Expressions. Encode and decode handled by other libraries.
bug-reports: https://github.com/andrewthad/s-expr-type
license: BSD-3-Clause
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2022 Andrew Martin
category: Data
extra-source-files:
  CHANGELOG.md
  README.md

library core
  build-depends:
    , base >=4.14.3.0 && <5
    , text-short >=0.1.3
    , bytesmith >=0.3.6
    , bytebuild >=0.3.6
    , byteslice >=0.2.5
    , contiguous >=0.6.1
    , scientific-notation >=0.1.3
    , array-builder >=0.1 && <0.2
    , array-chunks >=0.1.3 && <0.2
    , primitive >=0.7.3
    , natural-arithmetic >=0.1.2
    , vex
  exposed-modules:
    Smtlib.Expr
    Smtlib.Syntax
    Smtlib.Syntax.Term
    Smtlib.Logic.Lia
    Smtlib.Function.Annotation
  hs-source-dirs: src-core
  ghc-options: -Wall -O2
  default-language: Haskell2010

library term
  build-depends:
    , base >=4.14.3.0 && <5
    , text-short >=0.1.3
    , bytesmith >=0.3.6
    , bytebuild >=0.3.6
    , byteslice >=0.2.5
    , natural-arithmetic >=0.1.2
    , contiguous >=0.6.1
    , scientific-notation >=0.1.3
    , array-builder >=0.1 && <0.2
    , array-chunks >=0.1.3 && <0.2
    , primitive >=0.7.3
    , run-st >=0.1.1
    , transformers >=0.5.6.2
    , core
    , vex
  signatures: Smtlib.Logic
  exposed-modules: Smtlib.Term
  hs-source-dirs: src-term
  ghc-options: -Wall -O2
  default-language: Haskell2010

library instantiations
  build-depends:
    , term
    , core
  ghc-options: -Wall -O2
  default-language: Haskell2010
  reexported-modules:
    Smtlib.Term.Lia
  mixins:
    , term (Smtlib.Term as Smtlib.Term.Lia) requires (Smtlib.Logic as Smtlib.Logic.Lia)

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -O2
  main-is: Main.hs
  build-depends:
    , QuickCheck >=2.14.2
    , array-chunks
    , base >=4.12.0.0 && <5
    , bytebuild
    , byteslice >=0.1.3
    , bytestring
    , contiguous >=0.6.1
    , primitive
    , scientific
    , scientific-notation >=0.1.1
    , tasty >=1.2.3 && <1.3
    , tasty-hunit >=0.10.0.2 && <0.11
    , tasty-golden >=2.0 && <2.4
    , tasty-quickcheck >=0.10.1.2 && <0.11
    , text >=1.2
    , text-short
    , vex
    , core
    , instantiations
